src/snapshots/claptrap__tests__arg__requires_ifs_present-2.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_a491ef2c'
[1m[31merror:[0m the following required arguments were not provided:
  [32m<output>[0m

[1m[4mUsage:[0m [1mprog[0m [1m--config[0m <config> <input> <output>

For more information, try '[1m--help[0m'.
EOF_a491ef2c
exit 1
