src/snapshots/claptrap__tests__arg__trailing_var_arg.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_cmd=('arg1' '-r' 'val1')
