src/snapshots/claptrap__tests__arg__value_delimiter.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_config=('val1' 'val2' 'val3')
