src/snapshots/claptrap__tests__arg__value_terminator.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_cmds=('find' 'type' 'f' '-name' 'special')
claptrap_location='/home/clap'
